Influence Density with Hair error #37704

Closed
opened 2013-12-05 01:16:16 +01:00 by Cenek Strichel · 12 comments

System Information
Operating system and graphics card

Blender Version
Broken: Blender 2.XX rXXXXXX
Worked: Blender 2.XX rXXXXXX

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

**System Information** Operating system and graphics card **Blender Version** Broken: Blender 2.XX rXXXXXX Worked: Blender 2.XX rXXXXXX **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda
Author

Grrrr !!!! It delete my report, because I dont have name first :( .. So simply open my attached scene and Render in viewport (Viewport shading to Rendered) Model will cutted. In normal render it is ok. It is due to Infuence Denstity in texture on hair.

hair.blend

Grrrr !!!! It delete my report, because I dont have name first :( .. So simply open my attached scene and Render in viewport (Viewport shading to Rendered) Model will cutted. In normal render it is ok. It is due to Infuence Denstity in texture on hair. [hair.blend](https://archive.blender.org/developer/F36483/hair.blend)
Author

System: W8.1 64b, GForce 250
Blender: ab49437

System: W8.1 64b, GForce 250 Blender: ab49437

Added subscriber: @mikes

Added subscriber: @mikes

version 2.69 (sub 4), branch b'master', commit date b'2013-12-05' b'23:53', hash b'd74d6c7', b'Release'
build date: b'2013-12-06', b'12:58:19'
platform: b'Darwin:64bit'

Seems to work for me in Cycle Render Preview and Render outputs. Some textures don't produce much of a effect though but the output seems consistent between render and preview.

version 2.69 (sub 4), branch b'master', commit date b'2013-12-05' b'23:53', hash b'd74d6c7', b'Release' build date: b'2013-12-06', b'12:58:19' platform: b'Darwin:64bit' Seems to work for me in Cycle Render Preview and Render outputs. Some textures don't produce much of a effect though but the output seems consistent between render and preview.
Author

bug.png

Look on picture, I have same bug on another PC. i7-3930K, Quadro 4000, W7 64b

![bug.png](https://archive.blender.org/developer/F36780/bug.png) Look on picture, I have same bug on another PC. i7-3930K, Quadro 4000, W7 64b
Brecht Van Lommel self-assigned this 2013-12-10 19:36:55 +01:00

This issue was referenced by blender/blender-addons-contrib@d7945b7202

This issue was referenced by blender/blender-addons-contrib@d7945b7202c666cb8fcfb31e3f16caa46dc69ea6

This issue was referenced by d7945b7202

This issue was referenced by d7945b7202c666cb8fcfb31e3f16caa46dc69ea6

Fixed now, thanks for the report.

Fixed now, thanks for the report.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d7945b7202.

Closed by commit d7945b7202.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37704
No description provided.