Fix T37704: cycles hair render error with hair density vertex group.

Zero length hairs were causing problems, now it skips rendering them as they
are invisible anyway.